--- a/createaccpopup.css
+++ b/createaccpopup.css
@@ -5,7 +5,7 @@
   box-sizing: border-box;
   font-family: 'Poppins',sans-serif;
 
-  text-decoration: none;
+   text-decoration: none;
   color: black;
 }
 body{
@@ -13,7 +13,7 @@ body{
   height: 100vh;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(to bottom, #68Eacc 0%, #497BE8 100%);
+  background: linear-gradient(to bottom, #68Eacc 0%, #00E77F 100%);
  
 }
 ::selection{
