--- a/css/login1.css
+++ b/css/login1.css
@@ -1,33 +1,38 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
-*{
+
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
-body{
+
+body {
   min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
   background: #4070f4;
 }
-.wrapper{
+
+.wrapper {
   position: relative;
   max-width: 430px;
   width: 100%;
   background: #fff;
   padding: 34px;
   border-radius: 6px;
-  box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
-.wrapper h2{
+
+.wrapper h2 {
   position: relative;
   font-size: 22px;
   font-weight: 600;
   color: #333;
 }
-.wrapper h2::before{
+
+.wrapper h2::before {
   content: '';
   position: absolute;
   left: 0;
@@ -37,14 +42,17 @@ body{
   border-radius: 12px;
   background: #4070f4;
 }
-.wrapper form{
+
+.wrapper form {
   margin-top: 30px;
 }
-.wrapper form .input-box{
+
+.wrapper form .input-box {
   height: 52px;
   margin: 18px 0;
 }
-form .input-box input{
+
+form .input-box input {
   height: 100%;
   width: 100%;
   outline: none;
@@ -57,39 +65,47 @@ form .input-box input{
   border-radius: 6px;
   transition: all 0.3s ease;
 }
+
 .input-box input:focus,
-.input-box input:valid{
+.input-box input:valid {
   border-color: #4070f4;
 }
-form .policy{
+
+form .policy {
   display: flex;
   align-items: center;
 }
-form h3{
+
+form h3 {
   color: #707070;
   font-size: 14px;
   font-weight: 500;
   margin-left: 10px;
 }
-.input-box.button input{
+
+.input-box.button input {
   color: #fff;
   letter-spacing: 1px;
   border: none;
   background: #4070f4;
   cursor: pointer;
 }
-.input-box.button input:hover{
+
+.input-box.button input:hover {
   background: #0e4bf1;
 }
-form .text h3{
- color: #333;
- width: 100%;
- text-align: center;
+
+form .text h3 {
+  color: #333;
+  width: 100%;
+  text-align: center;
 }
-form .text h3 a{
+
+form .text h3 a {
   color: #4070f4;
   text-decoration: none;
 }
-form .text h3 a:hover{
+
+form .text h3 a:hover {
   text-decoration: underline;
 }
