--- a/css/createaccpopup.css
+++ b/css/createaccpopup.css
@@ -13,7 +13,8 @@ body{
   height: 100vh;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(to bottom, #68Eacc 0%, #00E77F 100%);
+  /* background: linear-gradient(to bottom, #68Eacc 0%, #00E77F 100%); */
+  background: linear-gradient(to bottom, #71bff3 0%, #e965b4 100%);
  
 }
 ::selection{
