--- a/css/login1.css
+++ b/css/login1.css
@@ -12,7 +12,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #00E77F;
+  background: linear-gradient(to bottom, #71bff3 0%, #e965b4 100%);
+  /* background: linear-gradient(to bottom, #68Eacc 0%, #00E77F 100%); */
 }
 
 .wrapper {
