--- a/css/admin.css
+++ b/css/admin.css
@@ -1,13 +1,13 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap');
-*{
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
 
-:root{
+:root {
     /* ===== Colors ===== */
     --primary-color: #0E4BF1;
     --panel-color: #FFF;
@@ -16,26 +16,27 @@
     --border-color: #e6e5e5;
     --toggle-color: #DDD;
     /* --box1-color: #4DA3FF; */
-    --box1-color:#1be5e8;
+    --box1-color: #1be5e8;
     /* --box4-color: #738ffe; */
     --box2-color: #ff8d8d;
     --box6-color: #DD2F6E;
-    --box5-color:#00E77F;
+    --box5-color: #00E77F;
     --box4-color: #FFE6AC;
     --box3-color: #E7D1FC;
     --title-icon-color: #fff;
-    
+
     /* ====== Transition ====== */
     --tran-05: all 0.5s ease;
     --tran-03: all 0.3s ease;
     --tran-03: all 0.2s ease;
 }
 
-body{
+body {
     min-height: 100vh;
     background-color: var(--primary-color);
 }
-body.dark{
+
+body.dark {
     --primary-color: #3A3B3C;
     --panel-color: #242526;
     --text-color: #CCC;
@@ -45,15 +46,19 @@ body.dark{
     --box1-color: #3A3B3C;
     --box2-color: #3A3B3C;
     --box3-color: #3A3B3C;
+    --box4-color: #3A3B3C;
     --title-icon-color: #CCC;
 }
+
 /* === Custom Scroll Bar CSS === */
 ::-webkit-scrollbar {
     width: 8px;
 }
+
 ::-webkit-scrollbar-track {
     background: #f1f1f1;
 }
+
 ::-webkit-scrollbar-thumb {
     background: var(--primary-color);
     border-radius: 12px;
@@ -65,11 +70,11 @@ body.dark{
 }
 
 body.dark::-webkit-scrollbar-thumb:hover,
-body.dark .activity-data::-webkit-scrollbar-thumb:hover{
+body.dark .activity-data::-webkit-scrollbar-thumb:hover {
     background: #3A3B3C;
 }
 
-nav{
+nav {
     position: fixed;
     top: 0;
     left: 0;
@@ -80,25 +85,29 @@ nav{
     border-right: 1px solid var(--border-color);
     transition: var(--tran-05);
 }
-nav.close{
+
+nav.close {
     width: 73px;
 }
-nav .logo-name{
+
+nav .logo-name {
     display: flex;
     align-items: center;
 }
-nav .logo-image{
+
+nav .logo-image {
     display: flex;
     justify-content: center;
     min-width: 45px;
 }
-nav .logo-image img{
+
+nav .logo-image img {
     width: 40px;
     object-fit: cover;
     border-radius: 50%;
 }
 
-nav .logo-name .logo_name{
+nav .logo-name .logo_name {
     font-size: 22px;
     font-weight: 600;
     color: var(--text-color);
@@ -106,28 +115,33 @@ nav .logo-name .logo_name{
     transition: var(--tran-05);
     cursor: pointer;
 }
-nav.close .logo_name{
+
+nav.close .logo_name {
     opacity: 0;
     pointer-events: none;
 }
-nav .menu-items{
+
+nav .menu-items {
     margin-top: 40px;
     height: calc(100% - 90px);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
-.menu-items li{
+
+.menu-items li {
     list-style: none;
 }
-.menu-items li a{
+
+.menu-items li a {
     display: flex;
     align-items: center;
     height: 50px;
     text-decoration: none;
     position: relative;
 }
-.nav-links li a:hover:before{
+
+.nav-links li a:hover:before {
     content: "";
     position: absolute;
     left: -7px;
@@ -136,10 +150,12 @@ nav .menu-items{
     border-radius: 50%;
     background-color: var(--box5-color);
 }
-body.dark li a:hover:before{
+
+body.dark li a:hover:before {
     background-color: var(--text-color);
 }
-.menu-items li a i{
+
+.menu-items li a i {
     font-size: 24px;
     min-width: 45px;
     height: 100%;
@@ -148,34 +164,41 @@ body.dark li a:hover:before{
     justify-content: center;
     color: var(--black-light-color);
 }
-.menu-items li a .link-name{
+
+.menu-items li a .link-name {
     font-size: 18px;
     font-weight: 400;
-    color: var(--black-light-color);    
+    color: var(--black-light-color);
     transition: var(--tran-05);
 }
-nav.close li a .link-name{
+
+nav.close li a .link-name {
     opacity: 0;
     pointer-events: none;
 }
+
 .nav-links li a:hover i,
-.nav-links li a:hover .link-name{
+.nav-links li a:hover .link-name {
     color: var(--box2-color);
 }
+
 body.dark .nav-links li a:hover i,
-body.dark .nav-links li a:hover .link-name{
+body.dark .nav-links li a:hover .link-name {
     color: var(--text-color);
 }
-.menu-items .logout-mode{
+
+.menu-items .logout-mode {
     padding-top: 10px;
     border-top: 1px solid var(--border-color);
 }
-.menu-items .mode{
+
+.menu-items .mode {
     display: flex;
     align-items: center;
     white-space: nowrap;
 }
-.menu-items .mode-toggle{
+
+.menu-items .mode-toggle {
     position: absolute;
     right: 14px;
     height: 50px;
@@ -185,7 +208,8 @@ body.dark .nav-links li a:hover .link-name{
     justify-content: center;
     cursor: pointer;
 }
-.mode-toggle .switch{
+
+.mode-toggle .switch {
     position: relative;
     display: inline-block;
     height: 22px;
@@ -193,7 +217,8 @@ body.dark .nav-links li a:hover .link-name{
     border-radius: 25px;
     background-color: var(--toggle-color);
 }
-.switch:before{
+
+.switch:before {
     content: "";
     position: absolute;
     left: 5px;
@@ -205,11 +230,12 @@ body.dark .nav-links li a:hover .link-name{
     border-radius: 50%;
     transition: var(--tran-03);
 }
-body.dark .switch:before{
+
+body.dark .switch:before {
     left: 20px;
 }
 
-.dashboard{
+.dashboard {
     position: relative;
     left: 250px;
     background-color: var(--panel-color);
@@ -218,11 +244,13 @@ body.dark .switch:before{
     padding: 10px 14px;
     transition: var(--tran-05);
 }
-nav.close ~ .dashboard{
+
+nav.close~.dashboard {
     left: 73px;
     width: calc(100% - 73px);
 }
-.dashboard .top{
+
+.dashboard .top {
     position: fixed;
     top: 0;
     left: 250px;
@@ -235,23 +263,27 @@ nav.close ~ .dashboard{
     transition: var(--tran-05);
     z-index: 10;
 }
-nav.close ~ .dashboard .top{
+
+nav.close~.dashboard .top {
     left: 73px;
     width: calc(100% - 73px);
 }
-.dashboard .top .sidebar-toggle{
+
+.dashboard .top .sidebar-toggle {
     font-size: 26px;
     color: var(--text-color);
     cursor: pointer;
 }
-.dashboard .top .search-box{
+
+.dashboard .top .search-box {
     position: relative;
     height: 45px;
     max-width: 600px;
     width: 100%;
     margin: 0 30px;
 }
-.top .search-box input{
+
+.top .search-box input {
     position: absolute;
     border: 1px solid var(--border-color);
     background-color: var(--panel-color);
@@ -264,7 +296,8 @@ nav.close ~ .dashboard .top{
     font-weight: 400;
     outline: none;
 }
-.top .search-box i{
+
+.top .search-box i {
     position: absolute;
     left: 15px;
     font-size: 22px;
@@ -273,19 +306,23 @@ nav.close ~ .dashboard .top{
     transform: translateY(-50%);
     color: var(--black-light-color);
 }
-.top img{
+
+.top img {
     width: 55px;
     border-radius: 50%;
 }
-.dashboard .dash-content{
+
+.dashboard .dash-content {
     padding-top: 50px;
 }
-.dash-content .title{
+
+.dash-content .title {
     display: flex;
     align-items: center;
     margin: 60px 0 30px 0;
 }
-.dash-content .title i{
+
+.dash-content .title i {
     position: relative;
     height: 35px;
     width: 35px;
@@ -297,19 +334,22 @@ nav.close ~ .dashboard .top{
     justify-content: center;
     font-size: 24px;
 }
-.dash-content .title .text{
+
+.dash-content .title .text {
     font-size: 24px;
     font-weight: 500;
     color: var(--text-color);
     margin-left: 10px;
 }
-.dash-content .boxes{
+
+.dash-content .boxes {
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
 }
-.dash-content .boxes .box{
+
+.dash-content .boxes .box {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -320,189 +360,224 @@ nav.close ~ .dashboard .top{
     transition: var(--tran-05);
     cursor: pointer;
 }
-.boxes .box i{
+
+.boxes .box i {
     font-size: 35px;
     color: var(--text-color);
 }
-.boxes .box .text{
+
+.boxes .box .text {
     white-space: nowrap;
     font-size: 18px;
     font-weight: 500;
     color: var(--text-color);
 }
-.boxes .box .number{
+
+.boxes .box .number {
     font-size: 40px;
     font-weight: 500;
     color: var(--text-color);
 }
-.boxes .box.box2{
+
+.boxes .box.box2 {
     background-color: var(--box2-color);
 }
-.boxes .box.box3{
+
+.boxes .box.box3 {
     background-color: var(--box3-color);
 }
 
-.boxes .box.box4{
-   background-color: var(--box4-color); 
-   /* background: linear-gradient(to bottom, #71bff3 0%, #e965b4 100%); */
-   margin: 20px 0px;
-   padding: 40px 0px;
+.boxes .box.box4 {
+    background-color: var(--box4-color);
+    /* background: linear-gradient(to bottom, #71bff3 0%, #e965b4 100%); */
+    margin: 20px 0px;
+    padding: 40px 0px;
 }
 
 
 
 @media (max-width: 1000px) {
-    nav{
+    nav {
         width: 73px;
     }
-    nav.close{
+
+    nav.close {
         width: 250px;
     }
-    nav .logo_name{
+
+    nav .logo_name {
         opacity: 0;
         pointer-events: none;
     }
-    nav.close .logo_name{
+
+    nav.close .logo_name {
         opacity: 1;
         pointer-events: auto;
     }
-    nav li a .link-name{
+
+    nav li a .link-name {
         opacity: 0;
         pointer-events: none;
     }
-    nav.close li a .link-name{
+
+    nav.close li a .link-name {
         opacity: 1;
         pointer-events: auto;
     }
-    nav ~ .dashboard{
+
+    nav~.dashboard {
         left: 73px;
         width: calc(100% - 73px);
     }
-    nav.close ~ .dashboard{
+
+    nav.close~.dashboard {
         left: 250px;
         width: calc(100% - 250px);
     }
-    nav ~ .dashboard .top{
+
+    nav~.dashboard .top {
         left: 73px;
         width: calc(100% - 73px);
     }
-    nav.close ~ .dashboard .top{
+
+    nav.close~.dashboard .top {
         left: 250px;
         width: calc(100% - 250px);
     }
-    .activity .activity-data{
+
+    .activity .activity-data {
         overflow-X: scroll;
     }
 }
 
 @media (max-width: 780px) {
-    .dash-content .boxes .box{
+    .dash-content .boxes .box {
         width: calc(100% / 2 - 15px);
         margin-top: 15px;
     }
 }
+
 @media (max-width: 560px) {
-    .dash-content .boxes .box{
-        width: 100% ;
+    .dash-content .boxes .box {
+        width: 100%;
     }
 }
+
 @media (max-width: 400px) {
-    nav{
+    nav {
         width: 0px;
     }
-    nav.close{
+
+    nav.close {
         width: 73px;
     }
-    nav .logo_name{
+
+    nav .logo_name {
         opacity: 0;
         pointer-events: none;
     }
-    nav.close .logo_name{
+
+    nav.close .logo_name {
         opacity: 0;
         pointer-events: none;
     }
-    nav li a .link-name{
+
+    nav li a .link-name {
         opacity: 0;
         pointer-events: none;
     }
-    nav.close li a .link-name{
+
+    nav.close li a .link-name {
         opacity: 0;
         pointer-events: none;
     }
-    nav ~ .dashboard{
+
+    nav~.dashboard {
         left: 0;
         width: 100%;
     }
-    nav.close ~ .dashboard{
+
+    nav.close~.dashboard {
         left: 73px;
         width: calc(100% - 73px);
     }
-    nav ~ .dashboard .top{
+
+    nav~.dashboard .top {
         left: 0;
         width: 100%;
     }
-    nav.close ~ .dashboard .top{
+
+    nav.close~.dashboard .top {
         left: 0;
         width: 100%;
     }
 }
 
-.nav-linkss{
-  display: flex;
-  align-items: center;
-  background: #fff;
-  padding: 20px 15px;
-  border-radius: 12px;
-  box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+.nav-linkss {
+    display: flex;
+    align-items: center;
+    background: #fff;
+    padding: 20px 15px;
+    border-radius: 12px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
-.nav-linkss li{
-  list-style: none;
-  margin: 0 12px;
+
+.nav-linkss li {
+    list-style: none;
+    margin: 0 12px;
 }
-.nav-linkss li a{
-  position: relative;
-  color: #333;
-  font-size: 20px;
-  font-weight: 500;
-  padding: 6px 0;
-  text-decoration: none;
+
+.nav-linkss li a {
+    position: relative;
+    color: #333;
+    font-size: 20px;
+    font-weight: 500;
+    padding: 6px 0;
+    text-decoration: none;
 }
-.nav-linkss li a:before{
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  height: 3px;
-  width: 0%;
-  background-color: var(--box5-color);
-  border-radius: 12px;
-  transition: all 0.4s ease;
+
+.nav-linkss li a:before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 3px;
+    width: 0%;
+    background-color: var(--box5-color);
+    border-radius: 12px;
+    transition: all 0.4s ease;
 }
-.nav-linkss li a:hover:before{
-  width: 100%;
+
+.nav-linkss li a:hover:before {
+    width: 100%;
 }
-.nav-linkss li.center a:before{
-  left: 50%;
-  transform: translateX(-50%);
+
+.nav-linkss li.center a:before {
+    left: 50%;
+    transform: translateX(-50%);
 }
-.nav-linkss li.upward a:before{
-  width: 100%;
-  bottom: -5px;
-  opacity: 0;
+
+.nav-linkss li.upward a:before {
+    width: 100%;
+    bottom: -5px;
+    opacity: 0;
 }
-.nav-linkss li.upward a:hover:before{
-  bottom: 0px;
-  opacity: 1;
+
+.nav-linkss li.upward a:hover:before {
+    bottom: 0px;
+    opacity: 1;
 }
-.nav-linkss li.forward a:before{
-  width: 100%;
-  transform: scaleX(0);
-  transform-origin: right;
-  transition: transform 0.4s ease;
+
+.nav-linkss li.forward a:before {
+    width: 100%;
+    transform: scaleX(0);
+    transform-origin: right;
+    transition: transform 0.4s ease;
 }
-.nav-linkss li.forward a:hover:before{
-  transform: scaleX(1);
-  transform-origin: left;
+
+.nav-linkss li.forward a:hover:before {
+    transform: scaleX(1);
+    transform-origin: left;
 }
 
 
@@ -536,7 +611,8 @@ nav.close ~ .dashboard .top{
     display: flex;
     justify-content: center;
 }
-.settings-menuu-inner span{
+
+.settings-menuu-inner span {
     color: var(--title-icon-color);
 }
 
@@ -546,4 +622,3 @@ nav.close ~ .dashboard .top{
     background: #9a9a9a;
     margin: 15px 0;
 }
-
